<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".about_activity"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:id="@+id/about_toolbar"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:elevation="8dp">

        </android.support.v7.widget.Toolbar>

       <ImageView
           android:layout_marginTop="10dp"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:src="@drawable/newlogonow"/>


        <TextView
            android:textColor="@android:color/white"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/about1"
            android:textAlignment="viewStart"
            android:textSize="15sp" />

        <TextView
            android:textColor="@android:color/white"
            android:layout_marginTop="-10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/about2"
            android:textSize="15sp" />

        <TextView
            android:textColor="@android:color/white"
            android:layout_marginTop="-10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/about3"
            android:textSize="15sp" />

        <TextView
            android:textColor="@android:color/white"
            android:layout_marginTop="-10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/about4"
            android:textSize="15sp" />

        <TextView
            android:textColor="@android:color/white"
            android:layout_marginTop="-10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/about5"
            android:textSize="15sp" />


    </LinearLayout>

    </ScrollView>

</LinearLayout>